--- a/app/templates/app/gis.html
+++ b/app/templates/app/gis.html
@@ -69,6 +69,25 @@
             </div>
         </div>
         
+        <div class="control-group entity-type-control">
+            <button class="control-toggle" id="entityTypeToggle">
+                <i class="fas fa-seedling"></i>
+            </button>
+            <div class="control-dropdown">
+                <h4>Entity Type</h4>
+                <div class="control-options">
+                    <div class="control-option">
+                        <input type="checkbox" name="entityType" id="showTrees" value="trees" checked>
+                        <label for="showTrees">Mature Trees</label>
+                    </div>
+                    <div class="control-option">
+                        <input type="checkbox" name="entityType" id="showSeeds" value="seeds" checked>
+                        <label for="showSeeds">Planted Seeds</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="control-group layer-control">
             <button class="control-toggle" id="layerControlToggle">
                 <i class="fas fa-map-marked-alt"></i>
